[UTF-8][Japanese]

*Ver3.0 RC1 : 2015/xx/xx


-印刷用リンクを別ページで開く設定ができるようにしました。（[http://adiary.blog.abk.nu/0366#com:Thanks to 手石]）
-【テーマ】あらゆる出力から{<input type="submit">, <input type="button">}を廃止しました。
-【fix】その他の設定に、謎のデザインモジュール再インストールボタンがあった。
-他

*Ver3.0β6 : 2015/05/17

-[bf:フッターの出力位置を変更しました]。
-記事編集画面から直接画像をアップロードできるようになりました。
-記事編集画面の入力部分にドラッグ＆ドロップしてファイルをアップロードできるようになりました。
-記事編集画面を洗練させました。
-FrontPage（固定トップページ）の時、記事タイトルをヘッダ出力しないように変更しました。
-システムモード非対応テーマを管理画面で使用しようとする時、警告を表示するようにした。
-表示パスワード機能やメンテナンスモードでの画面に、適切なHTTPステータスコードを設定した。
-スマホ判別に、BlackBerry と Windows Phone を加えました。
-コメント表示数の設定項目がなかったので修正。
-FrontPageのタイトル設定機能を追加。
-テーマを書きやすくするため、HTMLの出力構造を微修正しました。
-タグの編集、コンテンツ一覧の編集画面を少し使いやすくしました。
-HTML全体から「{{&nsbp;}}」を除去しました。
-検索結果画面の印刷表示ができるようになりました。（[http://adiary.blog.abk.nu/0359#com:Thanks to 手石]）
-【テーマ】base.cssを @import する仕様をやめました。((ファイルの場所も移動しました。importはCSS読み込み速度の面からも不利だと思われます。))
-【スマホ】記事編集を使いやすくしました。
-【スマホ】画像アルバムを使いやすくしました。
-【スマホ】システム画面の各所でスマホ用に表示を改善しました。
-【スマホ】ドラッグ＆ドロップエミュレーションを付けました（[http://adiary.blog.abk.nu/0365:詳細]）
-【スマホ】ヘッダに選択したメニューを出力できるようにしました。
-【スマホ】ヘッダに検索ボックスを出力するようにしました。
-【Markdown】[https://help.github.com/articles/github-flavored-markdown:GitHub Flavored Markdown]のテーブル記法等に対応しました。
-【Markdown】自動リンクをonにした場合、自動リンクするように変更しました。
-【Markdown】本家では、コードブロックの開始条件として手前が空行である必要があったので、その仕様に準拠しました。
-【Markdown】本家では、コードブロックの途中に空行を挟んでもokだったので、その仕様に準拠しました。
-【Markdown】【fix】HTMLブロック開始条件が間違っていた（行頭スペースを許可していた）。
-【Markdown】【fix】HTMLブロックの後ろに余計な空行が付いてしまう。
-【Markdown】【fix】文中に{{>}}等の記号があったときのエスケープ処理が正しくなかった。
-【Markdown】【fix】Satsuki.pmの目次記法の内部仕様変更に追従していなかった。
-【parser】見出し記法で、アンカーが存在しないときは{{<span class="sanchor">}}を出力しないようにしました。((テーマのCSS書いてて邪魔でしょうがなかった（苦笑）))
-【design】全体の背景画像を設定できるように変更。
-【design】ヘッダ用の「ブログの説明」プラグインを追加。
-【design】ブログ情報で参照するRSSアイコンを作り直しました。またRSSにリンクするよう変更しました。
-【記法】HTML5準拠のためtable記法のsummary指定を無効にしました。
-【fix】デフォルトブログ設定時のサイドバーなどURLが正しく書き換わってなかった。（[http://adiary.blog.abk.nu/0359#com:Thanks to 手石]）
-【fix】ヘッダ部のmargin/padding設定が有効ではなかった。
-【fix】ヘッダのタイトル文字位置がブログ表示時とデザイン編集時で異なる。