@@ -18,8 +18,8 @@ load_module_html_in_edit=1
 <input type="search" class="search-box w100" name="q" value="" required>
 <button type="submit" class="search-btn">検索</button>
 <span class="search-radio">
-<input class="search-title" type="radio" name="all" value="0" checked><label>タイトル</label>
-<input class="search-text"  type="radio" name="all" value="1"><label>全文</label>
+<input class="search-title" type="radio" name="all" value="0"><label>タイトル</label>
+<input class="search-text"  type="radio" name="all" value="1" checked><label>全文</label>
 </span>
 </form>
 </div>
@@ -34,8 +34,8 @@ HTML
 <button type="submit" class="search-btn">検索</button><@if(ps.br, '<br>')>
 <$ifset(exists(Query.all), all, Query.all, ps.all)>
 <span class="search-radio">
-<input class="search-title" type="radio" name="all" value="0" <@if(!all, "checked")>><label>タイトル</label>
-<input class="search-text"  type="radio" name="all" value="1" <@if( all, "checked")>><label>全文</label>
+<input class="search-title" type="radio" name="all" value="0" <@if(all eq '0', "checked")>><label>タイトル</label>
+<input class="search-text"  type="radio" name="all" value="1" <@if(all ne '0', "checked")>><label>全文</label>
 </span>
 </form>
 </div>
