@@ -34,9 +34,9 @@
 		</td>
 	</tr>
 	<tr>
-		<th>スイッチ表示<span class="help" data-help="ノードを開いたり閉じたりするスイッチを表示するか指定します。">?</span></th>
+		<th>折り畳みスイッチ<span class="help" data-help="ノードを開いたり閉じたりするスイッチを表示するか指定します。">?</span></th>
 		<td>
-			<input type="checkbox" name="switch" value="1"<@if(ps.switch, ' checked')>><label>表示する</label>
+			<input type="checkbox" name="switch" value="1"<@if(ps.switch, ' checked')>><label>スイッチ表示する</label>
 		</td>
 	</tr>
 	</tbody>
