@@ -1,0 +1,13 @@
+<@6>
+<@local(x,ps)>
+<$ps=argv#0>
+	<table class="blog-setting">
+	<tbody>
+	<tr>
+		<th>コンテンツ表示</th>
+		<td>
+			<input type="checkbox" name="blog_only" value="1"<@if(ps.blog_only,' checked')>><label>コンテンツは一覧に含めない</label>
+		</td>
+	</tr>
+	</tbody>
+	</table>
