@@ -1,11 +1,6 @@
 <@40.is_function>
 <@local(h)>
 <$h = validator(begin_hash, argv#0) )>
-	displays = 表示件数
-	displays:type = int
-	displays:min = 0
-	displays:max = 20
-	
 	blog_only = flag
 <$end>
 
