@@ -71,7 +71,7 @@
 	</tr>
 	<tr><th>wikiコンテンツの扱い</th>
 		<td>
-			<input type="checkbox" name="separate_blog" value="1"<@if(s.separate_blog, ' checked')>><label>ブログとwikiコンテンツ等を分離して扱う</label><span class="help" data-help="この設定を行うとコンテンツページは「最近の記事数件」「次の記事へのリンク」「ページ送り」「RSS」等で表示されなくなります。検索や記事一覧では表示されます。">?</span>
+			<input type="checkbox" name="separate_blog" value="1"<@if(s.separate_blog, ' checked')>><label>ブログとコンテンツを分離して扱う</label><span class="help" data-help="この設定を行うとコンテンツページは「ページ送り」「RSS」等で表示されなくなります。検索では表示されますが、コンテンツは日付を持たないものとして扱われます。">?</span>
 
 		</td>
 	</tr>
