@@ -2,8 +2,11 @@
 
 *Ver3.0 RC1 : 2015/xx/xx
 
-
+-コンテンツタイプで検索できるようになりました。
+-タグなし記事を検索できるようになりました。
+-検索のデフォルトを「全文」に変更しました。
 -印刷用リンクを別ページで開く設定ができるようにしました。（[http://adiary.blog.abk.nu/0366#com:Thanks to 手石]）
+-最近の記事一覧と過去ログに、コンテンツを含めない設定を追加しました。（[http://adiary.blog.abk.nu/0366#com:Thanks to 手石]）
 -【テーマ】あらゆる出力から{<input type="submit">, <input type="button">}を廃止しました。
 -【fix】その他の設定に、謎のデザインモジュール再インストールボタンがあった。
 -他
